mengubah deskripsi project

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
             <div class="card">
               <img src="img/projects/1.jpg" class="card-img-top" alt="projects1" />
               <div class="card-body">
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <p class="card-text">Dapat memahami setidaknya 1 bahasa pemograman yang harus dikuasai.</p>
               </div>
             </div>
           </div>
@@ -106,7 +106,7 @@
             <div class="card">
               <img src="img/projects/2.jpg" class="card-img-top" alt="projects2" />
               <div class="card-body">
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <p class="card-text">Membuat ide kreatif, ide dan mockup apa yang harus kita kerjakan.</p>
               </div>
             </div>
           </div>
@@ -114,7 +114,7 @@
             <div class="card">
               <img src="img/projects/3.jpg" class="card-img-top" alt="projects3" />
               <div class="card-body">
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <p class="card-text">Jalankan apa yang sesuai kita pikirkan.</p>
               </div>
             </div>
           </div>
@@ -122,7 +122,7 @@
             <div class="card">
               <img src="img/projects/4.jpg" class="card-img-top" alt="projects4" />
               <div class="card-body">
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <p class="card-text">Fokus pada project dan buat hal baru.</p>
               </div>
             </div>
           </div>
@@ -130,7 +130,7 @@
             <div class="card">
               <img src="img/projects/5.jpg" class="card-img-top" alt="projects5" />
               <div class="card-body">
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <p class="card-text">Mempercantik tampilan dengan gaya mu Sendiri.</p>
               </div>
             </div>
           </div>
@@ -188,7 +188,7 @@
 
     <!-- footer -->
     <footer class="bg-success text-center pb-5">
-      <p>Created with <i class="bi bi-heart text-white"></i> by <a href="https://www.instagram.com/m29_mujib" class="text-white fw-bold">Muhamad A Mujib</a></p>
+      <p>Created with <i class="bi bi-heart text-white"></i> by <a href="https://www.instagram.com/" class="text-white fw-bold">Muhamad A Mujib</a></p>
     </footer>
     <!-- footer end -->
 
