--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
     <!-- jumbotron -->
     <section class="jumbotron text-center">
-      <img src="img/mujib.jpg" alt="Muhamad A Mujib" width="200" class="rounded-circle img-thumbnail" />
+      <img src="img/m1.jpg" alt="Muhamad A Mujib" width="200" class="rounded-circle img-thumbnail" />
       <h1 class="display-4">Muhamad A Mujib</h1>
       <p class="lead">CEO | PT.Wmam</p>
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
@@ -104,7 +104,7 @@
           </div>
           <div class="col-md-4 mb-3">
             <div class="card">
-              <img src="img/projects/2.jpg" class="card-img-top" alt="projects2" />
+              <img src="img/projects/m2.jpg" class="card-img-top" alt="projects2" />
               <div class="card-body">
                 <p class="card-text">Membuat ide kreatif, ide dan mockup apa yang harus kita kerjakan.</p>
               </div>
@@ -112,7 +112,7 @@
           </div>
           <div class="col-md-4 mb-3">
             <div class="card">
-              <img src="img/projects/3.jpg" class="card-img-top" alt="projects3" />
+              <img src="img/projects/m3.jpg" class="card-img-top" alt="projects3" />
               <div class="card-body">
                 <p class="card-text">Jalankan apa yang sesuai kita pikirkan.</p>
               </div>
@@ -120,7 +120,7 @@
           </div>
           <div class="col-md-4 mb-3">
             <div class="card">
-              <img src="img/projects/4.jpg" class="card-img-top" alt="projects4" />
+              <img src="img/projects/m4.jpg" class="card-img-top" alt="projects4" />
               <div class="card-body">
                 <p class="card-text">Fokus pada project dan buat hal baru.</p>
               </div>
