mengubah deskripsi about me

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <!-- jumbotron -->
     <section class="jumbotron text-center">
       <img src="img/m1.jpg" alt="Muhamad A Mujib" width="200" class="rounded-circle img-thumbnail" />
-      <h1 class="display-4">Muhamad A Mujib</h1>
+      <h1 class="display-4">Muhamad Mujib</h1>
       <p class="lead">CEO | PT.Wmam</p>
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
         <path
@@ -68,10 +68,10 @@
         </div>
         <div class="row justify-content-center fs-5 text-center">
           <div class="col-md-4">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis fugit laudantium quas velit sed aliquid rerum voluptatum omnis non nemo!</p>
+            <p>Perkenalkan nama saya Muhamad Abdul Mujib,saya mahasiswa ubsi(Universitas Bina Sarana Informatika) dengan jurusan Sistem Informasi</p>
           </div>
           <div class="col-md-4">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt sunt obcaecati voluptates necessitatibus, autem dolorum vero adipisci, ipsa quaerat maiores, quae eaque neque et quis?</p>
+            <p>Alasan saya mengambil jurusan ini karena dari kecil saya suka dengan dunia script, kedepannya saya ingin menjadi seorang programmer sukses dan memiliki perusahaan yang di segani hingga dunia.</p>
           </div>
         </div>
       </div>
